--- a/index.html
+++ b/index.html
@@ -2,12 +2,41 @@
 <html lang='en'>
 
 <head>
-  <meta charset='utf8'>
+  <meta charset="UTF-8">
   <title>Debugging: project, week 1</title>
+  <link rel="stylesheet" href="style.css">
   <!-- Leave this here!  It renders the review buttons  -->
   <script src='./review-buttons/init.js'></script>
 </head>
 
-<body></body>
+<body>
+  <div class="container">
+    <div  class='btn'>
+      <button onclick='confirmEndingHandler()'>Confirm Ending  </button>
+    </div>
+    <div  class='btn'>
+      <button onclick='convertToCHandler()'>Convert to Celsius </button>
+    </div>
+    <div  class='btn'>
+      <button onclick='convertToFHandler()'>Convert to Fahrenheit</button>
+    </div>
+    <div  class='btn'>
+      <button onclick='findLongestWordLengthHandler()'> Find longest world</button>
+    </div>
+    <div  class='btn'>
+      <button onclick='repeatStringNumTimesHandler()'>Repeat string</button>
+    </div>
+    <div class='btn'>
+      <button onclick='reverseStringHandler()'> Reverse string</button>
+    </div>
+  </div>
+
+  <script src="scripts/confirm-ending.js"></script>
+  <script src="scripts/convert-to-c.js"></script>
+  <script src="scripts/convert-to-f.js"></script>
+  <script src="scripts/find-longest-word-length.js"></script>
+  <script src="scripts/repeat-string-num-times.js"></script>
+  <script src="scripts/reverse-a-string.js"></script>
+</body>
 
 </html>
